# demo-mcp-server

./: README.md  pyproject.toml  server.py  tools.py
src/demo_mcp/: __init__.py  server.py
