[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-mcp-server"
version = "0.1.0"
dependencies = [
    "mcp>=1.18.0",  # 确保支持 lowlevel API
]

[project.scripts]
demo-mcp-server = "demo_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/demo_mcp"]
